--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "cm:install": "cd codemirror.next && node bin/cm.js install",
+    "cm:build": "cd codemirror.next && npm run prepare"
   },
   "dependencies": {
     "core-js": "^3.6.5",
