--- a/package.json
+++ b/package.json
@@ -5,21 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "cm:install": "cd codemirror.next && node bin/cm.js install",
-    "cm:build": "cd codemirror.next && npm run prepare"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.19.1",
-    "@codemirror/lang-javascript": "^0.19.3",
-    "@codemirror/language": "^0.19.7",
-    "@lezer/common": "^0.15.10",
-    "@lezer/lr": "^0.15.5",
-    "@lezer/php": "^0.15.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@codemirror/lang-javascript": "^0.19.3",
+    "@lezer/common": "^0.15.11",
+    "@lezer/lr": "^0.15.5",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
