--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "vue3-codemirror",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/Codemirror.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name Codemirror src/components/Codemirror.vue",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -14,8 +15,6 @@
   },
   "devDependencies": {
     "@codemirror/lang-javascript": "^0.19.3",
-    "@lezer/common": "^0.15.11",
-    "@lezer/lr": "^0.15.5",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
